force-app/main/default/objects/DM_Sale_Line_Item__c/DM_Sale_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Sale Line Item</label>
    <nameField>
        <displayFormat>SLI-{0000}</displayFormat>
        <label>Sale Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>