force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Crop_Variety__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Variety__c</fullName>
    <label>Crop Variety</label>
    <type>TextArea</type>
</CustomField>