force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>DM_Customer_Account__c</fullName>
    <formula>DM_Sale__r.DM_Customer_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account</label>
    <type>Text</type>
</CustomField>