force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Direct_to_Market__c.field-meta.xml
<CustomField>
    <fullName>DM_Direct_to_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct to Market</label>
    <type>Checkbox</type>
</CustomField>