force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Harvest__c.field-meta.xml
<CustomField>
    <fullName>DM_Harvest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Harvest</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DM_Harvest__c.DM_Production__c</field>
            <operation>equals</operation>
            <valueField>$Source.DM_Production__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DM_Harvest__c</referenceTo>
    <relationshipLabel>Sale Line Items</relationshipLabel>
    <relationshipName>Sale_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>