force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Inventory__c.field-meta.xml
<CustomField>
    <fullName>DM_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory #</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DM_Inventory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Harvest</value>
        </filterItems>
        <filterItems>
            <field>DM_Inventory__c.DM_Remaining_Inventory__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>DM_Inventory__c</referenceTo>
    <relationshipLabel>Sale Line Items</relationshipLabel>
    <relationshipName>Sale_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>