force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Labeled_Organic__c.field-meta.xml
<CustomField>
    <fullName>DM_Labeled_Organic__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Labeled Organic</label>
    <type>Checkbox</type>
</CustomField>