force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Production__c.field-meta.xml
<CustomField>
    <fullName>DM_Production__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Production #</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DM_Production__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Cash Crops</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DM_Production__c</referenceTo>
    <relationshipLabel>Sale Line Items</relationshipLabel>
    <relationshipName>Sale_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>