force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_Shipped__c</fullName>
    <label>Quantity Shipped</label>
    <summarizedField>DM_Fulfillment_Line_Item__c.DM_Quantity_Shipped__c</summarizedField>
    <summaryForeignKey>DM_Fulfillment_Line_Item__c.DM_Sale_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>