force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_Sold__c</fullName>
    <label>Quantity Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>