force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Quantity_UOM_Production__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_UOM_Production__c</fullName>
    <label>Quantity UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pounds</fullName>
                <default>true</default>
                <label>Pounds</label>
            </value>
            <value>
                <fullName>Kilograms</fullName>
            </value>
            <value>
                <fullName>Bushels</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>