force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Quantity_UOM_Sale__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_UOM_Sale__c</fullName>
    <label>Quantity UOM</label>
    <length>80</length>
    <type>Text</type>
</CustomField>