force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Sale__c.field-meta.xml
<CustomField>
    <fullName>DM_Sale__c</fullName>
    <label>Sale</label>
    <referenceTo>DM_Sale__c</referenceTo>
    <relationshipLabel>Sale Line Items</relationshipLabel>
    <relationshipName>Sale_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>