force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Sale_Amount__c</fullName>
    <formula>DM_Quantity_Sold__c * DM_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>