force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Sale_Date__c</fullName>
    <formula>DM_Sale__r.DM_Sale_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>