force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Shipped_in_Full__c.field-meta.xml
<CustomField>
    <fullName>DM_Shipped_in_Full__c</fullName>
    <formula>if( DM_Quantity_Sold__c = DM_Quantity_Shipped__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped in Full</label>
    <type>Checkbox</type>
</CustomField>