force-app/main/default/objects/DM_Sale_Line_Item__c/fields/DM_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>DM_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>