force-app/main/default/objects/DM_Sale_Line_Item__c/fields/Production_Num__c.field-meta.xml
<CustomField>
    <fullName>Production_Num__c</fullName>
    <formula>DM_Production__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production #</label>
    <type>Text</type>
</CustomField>