force-app/main/default/objects/DM_Sale_Line_Item__c/recordTypes/Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Line_Item</fullName>
    <active>true</active>
    <label>Line Item</label>
</RecordType>